--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       rel="stylesheet"
     />
 
+    <!-- === OPEN GRAPH PREVIEW === -->
+    <meta
+      property="og:image"
+      content="https://domainkamu.com/image/preview.jpg"
+    />
+
+    <link type="image/png" sizes="120x120" rel="icon" href="icon/icon.png" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
