--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
     />
 
     <!-- === OPEN GRAPH PREVIEW === -->
-    <meta
-      property="og:image"
-      content="https://domainkamu.com/image/preview.jpg"
-    />
+    <meta property="og:image" content="https://i.imgur.com/3hiEoRP.jpeg" />
 
     <link type="image/png" sizes="120x120" rel="icon" href="icon/icon.png" />
 
