--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 
     <!-- Preview Link -->
     <meta property="og:title" content="JasaEdit" />
-    <meta
-      property="og:description"
-      content="Bisa order melalui web"
-    />
+    <meta property="og:description" content="Bisa order melalui web" />
     <meta property="og:url" content="Editing" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://i.imgur.com/3hiEoRP.jpeg" />
+    <meta property="og:image" content="https://i.imgur.com/hFnClnN.jpeg" />
     <meta property="og:site_name" content="Editing Website" />
 
     <link type="image/png" sizes="120x120" rel="icon" href="icon/icon.png" />
