--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JasaEdit</title>
+    <title>JasaEdit | Creative Studio</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -14,115 +14,129 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&family=Playfair+Display:ital,wght@0,700;1,700&display=swap"
       rel="stylesheet"
     />
-
-    <!-- Preview Link -->
-    <meta property="og:title" content="JasaEdit" />
-    <meta property="og:description" content="Bisa order melalui web" />
-    <meta property="og:url" content="Editing" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://i.imgur.com/hFnClnN.jpeg" />
-    <meta property="og:site_name" content="Editing Website" />
-
-    <link type="image/png" sizes="120x120" rel="icon" href="icon/icon.png" />
-
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <!-- NAVBAR -->
     <nav class="navbar fixed-top">
-      <div class="container d-flex justify-content-between align-items-center">
-        <h4 class="logo">🎨 JasaEdit</h4>
+      <div class="container">
+        <a href="#" class="brand">Jasa<span>Edit</span></a>
 
-        <div class="nav-actions">
-          <button id="darkToggle" class="icon-btn">
-            <i class="bi bi-moon"></i>
+        <div class="nav-right">
+          <button id="darkToggle" class="theme-btn">
+            <i class="bi bi-moon-stars"></i>
           </button>
-
           <button
-            class="icon-btn"
-            data-bs-toggle="modal"
-            data-bs-target="#cartModal"
+            class="cart-trigger"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#cartCanvas"
           >
-            <i class="bi bi-cart"></i>
-            <span id="cartCount">0</span>
+            <div class="cart-icon-wrapper">
+              <i class="bi bi-bag"></i>
+              <span id="cartCount" class="count-badge">0</span>
+            </div>
+            <span id="navCartPrice" class="cart-total-nav">Rp 0</span>
           </button>
         </div>
       </div>
     </nav>
 
-    <!-- HERO -->
-    <section class="hero">
-      <h1>Jasa Editing & Desain</h1>
-      <p>Murah • Rapi • Profesional</p>
-    </section>
-
-    <!-- PRODUK -->
-    <section class="container my-5">
-      <h2 class="text-center mb-4">Layanan</h2>
-      <div class="row g-4" id="productList"></div>
-    </section>
-
-    <!-- MODAL PREVIEW IMAGE -->
-    <div class="modal fade" id="imageModal" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered modal-lg">
-        <div class="modal-content bg-dark p-2">
-          <img id="modalImage" src="" class="img-fluid rounded" />
+    <header class="hero-section">
+      <div class="container">
+        <div class="hero-card">
+          <div class="hero-text">
+            <span class="sub-title">Expert Photo Editor</span>
+            <h1>
+              Ubah Foto Biasa <br />
+              Jadi <em>Luar Biasa</em>
+            </h1>
+            <p>
+              Layanan editing profesional dengan sentuhan estetik untuk segala
+              kebutuhan visual Anda.
+            </p>
+            <a href="#produk-section" class="main-btn"
+              >Eksplor Layanan <i class="bi bi-arrow-right"></i
+            ></a>
+          </div>
         </div>
       </div>
-    </div>
+    </header>
 
-    <!-- MODAL CART -->
-    <div class="modal fade" id="cartModal">
-      <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header bg-primary text-white">
-            <h5>Keranjang</h5>
-            <button
-              class="btn-close btn-close-white"
-              data-bs-dismiss="modal"
-            ></button>
+    <main class="container my-5" id="produk-section">
+      <div class="section-title">
+        <h2>Katalog Layanan</h2>
+        <p>Pilih paket yang sesuai dengan kebutuhan kreatifmu</p>
+      </div>
+      <div class="row g-4" id="productList"></div>
+    </main>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="cartCanvas">
+      <div class="offcanvas-header border-bottom">
+        <h5 class="offcanvas-title fw-bold">Keranjang Belanja</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+        ></button>
+      </div>
+      <div class="offcanvas-body d-flex flex-column">
+        <div id="cartItems" class="flex-grow-1"></div>
+
+        <div class="checkout-footer pt-3">
+          <div class="d-flex justify-content-between mb-3 align-items-center">
+            <span class="text-muted">Estimasi Total</span>
+            <span id="cartTotal" class="total-price-text">Rp 0</span>
           </div>
 
-          <div class="modal-body">
-            <div id="cartItems"></div>
-
-            <hr />
-            <h5>Total: Rp <span id="cartTotal">0</span></h5>
-
+          <div class="form-floating mb-2">
             <input
+              type="text"
               id="custName"
-              class="form-control mb-1"
-              placeholder="Nama lengkap"
+              class="form-control custom-input"
+              placeholder="Nama"
             />
-            <small id="nameError" class="text-danger d-none">
-              Nama wajib diisi
-            </small>
+            <label for="custName">Nama Lengkap</label>
+            <small
+              id="nameError"
+              class="text-danger d-none"
+              style="font-size: 11px"
+              >* Nama wajib diisi untuk pesanan</small
+            >
+          </div>
 
+          <div class="form-floating mb-3">
             <textarea
               id="custNote"
-              class="form-control mb-3"
-              placeholder="Catatan pesanan"
+              class="form-control custom-input"
+              placeholder="Catatan"
+              style="height: 100px"
             ></textarea>
-
-            <div class="d-flex gap-2">
-              <button id="clearCart" class="btn btn-outline-danger w-50">
-                Kosongkan
-              </button>
-              <button id="checkoutBtn" class="btn btn-success w-50">
-                <i class="bi bi-whatsapp"></i> Kirim WA
-              </button>
-            </div>
+            <label for="custNote">Catatan / Detail Pesanan</label>
           </div>
+
+          <button id="checkoutBtn" class="btn-wa-checkout">
+            Kirim via WhatsApp <i class="bi bi-whatsapp ms-2"></i>
+          </button>
+          <button id="clearCart" class="btn-clear-all mt-2">Hapus Semua</button>
         </div>
       </div>
     </div>
 
-    <footer>
-      <p>© 2026 Meita Delvina Genetri</p>
+    <div class="modal fade" id="imageModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content bg-transparent border-0">
+          <img id="modalImage" src="" class="img-fluid rounded-4 shadow-lg" />
+        </div>
+      </div>
+    </div>
+
+    <footer class="text-center py-5">
+      <p class="mb-0 text-muted">
+        © 2026 JasaEdit Studio. All Rights Reserved.
+      </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
